// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow <Infobox /> components check props: infobox 1`] = `
<div
  className="infobox"
>
  <div
    className="infobox-header"
  >
    <button
      className="close"
      onClick={[MockFunction]}
      type="button"
    >
      <span>
        ×
      </span>
    </button>
    <div
      className="row_name"
    >
      test
       
      <sup>
        <a
          href="wiki"
          rel="noopener noreferrer"
          target="_blank"
        >
          wiki
        </a>
      </sup>
    </div>
    <i
      aria-controls="infobox-collapse"
      aria-expanded={true}
      className="fas fa-angle-down"
      onClick={[Function]}
    />
  </div>
  <Collapse
    appear={false}
    dimension="height"
    getDimensionValue={[Function]}
    in={true}
    mountOnEnter={false}
    timeout={300}
    unmountOnExit={false}
  >
    <div
      id="infobox-collapse"
    >
      <table>
        <tbody>
          <tr>
            <td
              colSpan="2"
            >
              <img
                src="flag"
              />
            </td>
          </tr>
          <tr>
            <td>
              <FormattedMessage
                id="capital"
                values={Object {}}
              />
            </td>
            <td>
              <a
                href="capital.wiki"
                rel="noopener noreferrer"
                target="_blank"
              >
                capital.name
              </a>
            </td>
          </tr>
          <tr>
            <td>
              <FormattedMessage
                id="area"
                values={Object {}}
              />
            </td>
            <td>
              area
            </td>
          </tr>
          <tr>
            <td>
              <FormattedMessage
                id="population"
                values={Object {}}
              />
            </td>
            <td>
              population
            </td>
          </tr>
          <tr>
            <td>
              <FormattedMessage
                id="currency"
                values={Object {}}
              />
            </td>
            <td>
              currency
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </Collapse>
</div>
`;

exports[`shallow <Infobox /> components check props: infobox-empty 1`] = `
<div
  className="infobox"
>
  <div
    className="infobox-header"
  >
    <button
      className="close"
      type="button"
    >
      <span>
        ×
      </span>
    </button>
    <div
      className="row_name"
    >
       
      <sup>
        <a
          rel="noopener noreferrer"
          target="_blank"
        >
          wiki
        </a>
      </sup>
    </div>
    <i
      aria-controls="infobox-collapse"
      aria-expanded={true}
      className="fas fa-angle-down"
      onClick={[Function]}
    />
  </div>
  <Collapse
    appear={false}
    dimension="height"
    getDimensionValue={[Function]}
    in={true}
    mountOnEnter={false}
    timeout={300}
    unmountOnExit={false}
  >
    <div
      id="infobox-collapse"
    >
      <table>
        <tbody>
          <tr>
            <td
              colSpan="2"
            >
              <img
                src="coat_of_arms"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </Collapse>
</div>
`;

exports[`shallow <Infobox /> components click collapse: infobox 1`] = `
<div
  className="infobox"
>
  <div
    className="infobox-header"
  >
    <button
      className="close"
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      type="button"
    >
      <span>
        ×
      </span>
    </button>
    <div
      className="row_name"
    >
      test
       
      <sup>
        <a
          href="wiki"
          rel="noopener noreferrer"
          target="_blank"
        >
          wiki
        </a>
      </sup>
    </div>
    <i
      aria-controls="infobox-collapse"
      aria-expanded={true}
      className="fas fa-angle-down"
      onClick={[Function]}
    />
  </div>
  <Collapse
    appear={false}
    dimension="height"
    getDimensionValue={[Function]}
    in={true}
    mountOnEnter={false}
    timeout={300}
    unmountOnExit={false}
  >
    <div
      id="infobox-collapse"
    >
      <table>
        <tbody>
          <tr>
            <td
              colSpan="2"
            >
              <img
                src="flag"
              />
            </td>
          </tr>
          <tr>
            <td>
              <FormattedMessage
                id="capital"
                values={Object {}}
              />
            </td>
            <td>
              <a
                href="capital.wiki"
                rel="noopener noreferrer"
                target="_blank"
              >
                capital.name
              </a>
            </td>
          </tr>
          <tr>
            <td>
              <FormattedMessage
                id="area"
                values={Object {}}
              />
            </td>
            <td>
              area
            </td>
          </tr>
          <tr>
            <td>
              <FormattedMessage
                id="population"
                values={Object {}}
              />
            </td>
            <td>
              population
            </td>
          </tr>
          <tr>
            <td>
              <FormattedMessage
                id="currency"
                values={Object {}}
              />
            </td>
            <td>
              currency
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </Collapse>
</div>
`;

exports[`shallow <Infobox /> components click collapse: infobox-collapse 1`] = `
<div
  className="infobox"
>
  <div
    className="infobox-header"
  >
    <button
      className="close"
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      type="button"
    >
      <span>
        ×
      </span>
    </button>
    <div
      className="row_name"
    >
      test
       
      <sup>
        <a
          href="wiki"
          rel="noopener noreferrer"
          target="_blank"
        >
          wiki
        </a>
      </sup>
    </div>
    <i
      aria-controls="infobox-collapse"
      aria-expanded={false}
      className="fas fa-angle-up"
      onClick={[Function]}
    />
  </div>
  <Collapse
    appear={false}
    dimension="height"
    getDimensionValue={[Function]}
    in={false}
    mountOnEnter={false}
    timeout={300}
    unmountOnExit={false}
  >
    <div
      id="infobox-collapse"
    >
      <table>
        <tbody>
          <tr>
            <td
              colSpan="2"
            >
              <img
                src="flag"
              />
            </td>
          </tr>
          <tr>
            <td>
              <FormattedMessage
                id="capital"
                values={Object {}}
              />
            </td>
            <td>
              <a
                href="capital.wiki"
                rel="noopener noreferrer"
                target="_blank"
              >
                capital.name
              </a>
            </td>
          </tr>
          <tr>
            <td>
              <FormattedMessage
                id="area"
                values={Object {}}
              />
            </td>
            <td>
              area
            </td>
          </tr>
          <tr>
            <td>
              <FormattedMessage
                id="population"
                values={Object {}}
              />
            </td>
            <td>
              population
            </td>
          </tr>
          <tr>
            <td>
              <FormattedMessage
                id="currency"
                values={Object {}}
              />
            </td>
            <td>
              currency
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </Collapse>
</div>
`;
